docs/api/qiskit/0.19/qiskit.aqua.components.variational_forms.VariationalForm.mdx
---
title: VariationalForm (v0.19)
description: API reference for qiskit.aqua.components.variational_forms.VariationalForm in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.variational_forms.VariationalForm
---

# VariationalForm

<Class id="qiskit.aqua.components.variational_forms.VariationalForm" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/variational_forms/variational_form.py" signature="VariationalForm" modifiers="class">
  Base class for VariationalForms.

  This method should initialize the module and use an exception if a component of the module is not available.

  ## Attributes

  <span id="variationalform-num-parameters" />

  ### num\_parameters

  <Attribute id="qiskit.aqua.components.variational_forms.VariationalForm.num_parameters">
    Number of parameters of the variational form.

    **Returns**

    An integer indicating the number of parameters.

    **Return type**

    int
  </Attribute>

  <span id="variationalform-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.components.variational_forms.VariationalForm.num_qubits">
    Number of qubits of the variational form.

    **Returns**

    An integer indicating the number of qubits.

    **Return type**

    int
  </Attribute>

  <span id="variationalform-parameter-bounds" />

  ### parameter\_bounds

  <Attribute id="qiskit.aqua.components.variational_forms.VariationalForm.parameter_bounds">
    Parameter bounds.

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If None is returned, problem is fully unbounded.

    **Return type**

    list
  </Attribute>

  <span id="variationalform-preferred-init-points" />

  ### preferred\_init\_points

  <Attribute id="qiskit.aqua.components.variational_forms.VariationalForm.preferred_init_points">
    Return preferred init points.

    If an initial state is provided then the variational form may provide back this set of parameters which when used on the variational form should result in the overall state being that defined by the initial state
  </Attribute>

  <span id="variationalform-setting" />

  ### setting

  <Attribute id="qiskit.aqua.components.variational_forms.VariationalForm.setting" />

  <span id="variationalform-support-parameterized-circuit" />

  ### support\_parameterized\_circuit

  <Attribute id="qiskit.aqua.components.variational_forms.VariationalForm.support_parameterized_circuit">
    Whether or not the sub-class support parameterized circuit.

    **Returns**

    indicate the sub-class support parameterized circuit

    **Return type**

    boolean
  </Attribute>

  ## Methods

  <span id="variationalform-construct-circuit" />

  ### construct\_circuit

  <Function id="qiskit.aqua.components.variational_forms.VariationalForm.construct_circuit" signature="VariationalForm.construct_circuit(parameters, q=None)" modifiers="abstract">
    Construct the variational form, given its parameters.

    **Parameters**

    *   **parameters** (`Union`\[`List`\[`float`], `ndarray`]) – circuit parameters.
    *   **q** (`Optional`\[[`QuantumRegister`](qiskit.circuit.QuantumRegister "qiskit.circuit.quantumregister.QuantumRegister")]) – Quantum Register for the circuit.

    **Returns**

    A quantum circuit.

    **Return type**

    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
  </Function>

  <span id="variationalform-get-entangler-map" />

  ### get\_entangler\_map

  <Function id="qiskit.aqua.components.variational_forms.VariationalForm.get_entangler_map" signature="VariationalForm.get_entangler_map(map_type, num_qubits, offset=0)" modifiers="static">
    returns entangler map
  </Function>

  <span id="variationalform-validate-entangler-map" />

  ### validate\_entangler\_map

  <Function id="qiskit.aqua.components.variational_forms.VariationalForm.validate_entangler_map" signature="VariationalForm.validate_entangler_map(entangler_map, num_qubits)" modifiers="static">
    validate entangler map
  </Function>
</Class>

